# OmniDrive

./: .gitignore  CMakeLists.txt  LICENSE.md  arm-toolchain.cmake
asm/: ASUS_BW-16D1HT_3.02.asm  DE_LG BU40N_1.00.asm  HL-DT-ST_BD-RE_BU40N_1.00.asm  main.asm  mmio.asm
scripts/: update_cmac.py
src/: defs.h  main.c  mmio.h
